Fix flakiness in Android renderer OOPHP test.

The current flakiness occurs in the form of a timeout waiting for profiling to
start for renderers. On Android, there's a warm-up renderer that could start
before ProfilingProcessHost gets a chance to start up - as such, it will never
be profiled. This CL adds logic to force profiling to start for all renderers,
which should fix the flakiness.

This CL also fixes a bug in ProfilingClient, which was only keeping the most
recent binding.

Bug: 804412
Change-Id: I836e55650b30a6360e0bc0f9189aacb7a75ea0c9
Reviewed-on: https://chromium-review.googlesource.com/889999
Reviewed-by: Maria Khomenko <mariakhomenko@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532544}
Former-commit-id: 4c353749ab3fb37cc4b8dd0f6693db4328c54ee5