chrome/browser/profiling_host/profiling_test_driver.cc
@@ -429,6 +429,15 @@ bool ProfilingTestDriver::RunTest(const Options& options) {
     if (!initialization_success_)
       return false;
     if (ShouldProfileRenderer()) {
+      // On Android, there is a warm-up renderer that is sometimes started
+      // before the ProfilingProcessHost can be started. This renderer will
+      // therefore not be profiled, even if Chrome is started with the
+      // --memlog=all-renderers switch.
+      content::BrowserThread::PostTask(
+          content::BrowserThread::UI, FROM_HERE,
+          base::Bind(&ProfilingProcessHost::StartProfilingRenderersForTesting,
+                     base::Unretained(ProfilingProcessHost::GetInstance())));
+
       content::BrowserThread::PostTask(
           content::BrowserThread::UI, FROM_HERE,
           base::Bind(
